k8s/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: agent-deployment
  namespace: ticketing-v2

spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: agent-service

  template:
    metadata:
      labels:
        app: agent-service

    spec:
      containers:
        - name: agent-service
          image: 051146571550.dkr.ecr.ap-south-1.amazonaws.com/ticketing-v2-agent-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8003
