k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: event-deployment
  namespace: ticketing-v2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: event-service

  template:
    metadata:
      labels:
        app: event-service

    spec:
      containers:
        - name: event-service

          image: 051146571550.dkr.ecr.ap-south-1.amazonaws.com/ticketing-v2-event-service:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8001
