k8s/agent-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: agent-service
  namespace: ticketing-v2

spec:
  selector:
    app: agent-service

  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003

  type: ClusterIP
