k8s/event-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: event-service
  namespace: ticketing-v2

spec:
  selector:
    app: event-service

  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

  type: ClusterIP
