k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ticketing-ingress
  namespace: ticketing-v2

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8001

          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8002

          - path: /agent
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 8003
